--- a/index.html
+++ b/index.html
@@ -1,44 +1,184 @@
 <!DOCTYPE html>
 <html lang="es" dir="ltr">
+
 <head>
   <meta charset="utf-8">
   <title>Portafolio</title>
   <meta name="viewport" content="width=device-width, initial-scalet=1.0">
   <!--CSS de Boostraps 4.2.1-->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-  <!--Google Fonts lobster-->
-  <link href="https://fonts.googleapis.com/css?family=Lobster|Roboto&display=swap" rel="stylesheet">
-  <!--Google Fonts Cabin-->
-  <link href="https://fonts.googleapis.com/css?family=Cabin:400,700&display=swap" rel="stylesheet">
+  <!--Google Fonts Roboto- Fjalla-->
+  <link href="https://fonts.googleapis.com/css?family=Fjalla+One|Roboto:700&display=swap" rel="stylesheet">
   <!--fontawesome-->
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
   <!--Mi estilo css-->
   <link rel="stylesheet" href="assets/css/style.css">
 </head>
+
 <body>
   <nav class="navbar navbar-expand-lg navbar-white bg-dark">
-    <h2 class="l">Ricomida</h2>
+    <h2 class="uno text-light">Mi Portafolio</h2>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 
     </button>
     <div class="collapse navbar-collapse navbar" id="navbarNav">
       <ul class="navbar-nav ml-auto">
         <li class="nav-item">
-          <a class="nav-link text-white" href="#">Descripcion<span class="sr-only">(current)</span></a>
+          <a class="nav-link text-white" href="#about">Descripcion</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link text-white" href="#">Experiencia</a>
+          <a class="nav-link text-white" href="#experience">Experiencia</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link text-white" href="#">Trabajos</a>
+          <a class="nav-link text-white" href="#work">Trabajos</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link text-white" href="#">Contacto</a>
+          <a class="nav-link text-white" href="#contact">Contacto</a>
+        <li class="nav-item">
+          <a class="nav-link text-white" href="#redes">Redes sociales</a>
         </li>
       </ul>
     </div>
   </nav>
+  <header>
+    <div class="container my-5 primero">
+      <div class="row">
+        <div class="col-md-12">
+          <img src="assets/img/bg_hero.png" alt="principal" class="img-fluid">
+        </div>
+        <div class="col-md-12">
+          <h1 class="text-center">Yo soy KARINA</h1>
+          <hr>
+        </div>
+      </div>
+    </div>
+  </header>
 
+  <section class="d-none d-sm-block d-xs-block" id="about">
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+      Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+      Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+      .</p>
+  </section>
+
+  <hr>
+  <div class="container d-none d-sm-block d-xs-block">
+    <div class="row">
+      <div class="col-md-6 d-none d-sm-block d-xs-block">
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis
+          aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+          Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+      </div>
+      <div class="col-md-6 d-none d-sm-block d-xs-block">
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+          Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+          Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.n</p>
+        <button type="button" class="btn btn-outline-secondary" data-toggle="tooltip" data-placement="bottom" title="Un poco mas">
+          Más sobre mi
+        </button>
+      </div>
+    </div>
+  </div>
+  <hr>
+  <section class="bg-light" id="experience">
+    <h1 class="text-center">Experiencia</h1>
+    <div class="row">
+      <div class="card col-md-6 col-12 bg-ligth" style="width: 18rem;">
+        <i class="fas fa-code fa-spin fa-7x fa-fw" style="color: purple;"></i>
+        <div class="card-body">
+          <p class="card-text text-dark">CÓDIGO</p>
+        </div>
+
+      </div>
+      <div class="card col-md-6 col-12 bg-ligth" style="width: 18rem;">
+        <i class="fab fa-html5 fa-7x" style="color: purple;"></i>
+        <div class="card-body">
+          <p class="card-text text-dark">HTML 5</p>
+        </div>
+      </div>
+    </div>
+  </section>
+  <section  class="work" id="work">
+    <h1 class="text-center text-light">Trabajos</h1>
+
+    <div id="carouselExampleIndicators" class="carousel slide d-none d-sm-block d-xs-block" data-ride="carousel">
+      <ol class="carousel-indicators">
+        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+      </ol>
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <div class="container">
+            <div class="row">
+              <div class="col-md-3 d-none d-sm-block d-xs-block">
+                <img src="assets/img/meet_coffee.png" class="d-block w-100" alt="slider-1">
+              </div>
+              <div class="col-md-3">
+                <img src="assets/img/iguana_page.png" class="d-block w-100" alt="slider-2">
+              </div>
+              <div class="col-md-3">
+                <img src="assets/img/cuppon.png" class="d-block w-100" alt="slider-3">
+              </div>
+              <div class="col-md-3">
+                <img src="assets/img/suricata.png" class="d-block w-100" alt="slider-4">
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <div class="container">
+            <div class="row">
+              <div class="col-md-3 d-none d-sm-block d-xs-block">
+                <img src="assets/img/suricata.png" class="d-block w-100" alt="suricata">
+              </div>
+              <div class="col-md-3 d-none d-sm-block d-xs-block">
+                <img src="assets/img/dmark.png" class="d-block w-100" alt="dmark">
+              </div>
+              <div class="col-md-3 d-none d-sm-block d-xs-block">
+                <img src="assets/img/ricomida.png" class="d-block w-100" alt="ricomida">
+              </div>
+              <div class="col-md-3 d-none d-sm-block d-xs-block">
+                <img src="assets/img/cuppon.png" class="d-block w-100" alt="cuppon">
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <hr>
+  <section id="contact">
+
+
+    <div class="typeform-widget" data-url="https://karina517089.typeform.com/to/PxIjxM" style="width: 100%; height: 500px;"></div>
+    <script>
+      (function() {
+        var qs, js, q, s, d = document,
+          gi = d.getElementById,
+          ce = d.createElement,
+          gt = d.getElementsByTagName,
+          id = "typef_orm",
+          b = "https://embed.typeform.com/";
+        if (!gi.call(d, id)) {
+          js = ce.call(d, "script");
+          js.id = id;
+          js.src = b + "embed.js";
+          q = gt.call(d, "script")[0];
+          q.parentNode.insertBefore(js, q)
+        }
+      })()
+    </script>
+    <div style="font-family: Sans-Serif;font-size: 12px;color: #999;opacity: 0.5; padding-top: 5px;"> powered by <a
+        href="https://admin.typeform.com/signup?utm_campaign=PxIjxM&utm_source=typeform.com-14610728-Free&utm_medium=typeform&utm_content=typeform-embedded-poweredbytypeform&utm_term=ES" style="color: #999" target="_blank">Typeform</a> </div>
+
+  </section>
+
+  <footer id="redes" class="text-center">
+    <a href="https://github.com/"><i class="fab fa-github-square fa-5x"></i></a>
+    <a href="https://twitter.com/"><i class="fab fa-twitter-square fa-5x"></i></a>
+    <a href="https://www.linkedin.com/"><i class="fab fa-linkedin fa-5x"></i></a>
+    <p>Todos los derechos reservados.</p>
+  </footer>
 
   <!--JQuery 3.2.1-->
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
@@ -49,4 +189,5 @@
   <!--mi scrip-->
   <script src="assets/js/script.js"></script>
 </body>
+
 </html>
