--- a/index.html
+++ b/index.html
@@ -83,14 +83,14 @@
   <section class="bg-light" id="experience">
     <h1 class="text-center">Experiencia</h1>
     <div class="row">
-      <div class="card col-md-6 col-12 bg-ligth" style="width: 18rem;">
+      <div class="dos card col-md-6 col-12 bg-ligth" style="width: 18rem;">
         <i class="fas fa-code fa-spin fa-7x fa-fw" style="color: purple;"></i>
         <div class="card-body">
           <p class="card-text text-dark">CÓDIGO</p>
         </div>
 
       </div>
-      <div class="card col-md-6 col-12 bg-ligth" style="width: 18rem;">
+      <div class="dos card col-md-6 col-12 bg-ligth" style="width: 18rem;">
         <i class="fab fa-html5 fa-7x" style="color: purple;"></i>
         <div class="card-body">
           <p class="card-text text-dark">HTML 5</p>
